tests/paczka1/fuzzy1/18240094.err
Error in line 1: EPr A519 50,6
Error in line 27: o4Lmnqzgtvf A848 -2,3
Error in line 22: dXRTUM9Lf A880 30,2
Error in line 30: EPr A848 47,2
Error in line 25: o4Lmnqzgtvf A848 27,9
